@@ -1,14 +1,11 @@
-FROM gradle:8.7.0-jdk17-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
-
+#FROM openjdk:17
+#WORKDIR /app
+#COPY . .
+#RUN #./gradlew wrapper
+#RUN #./gradlew build
+#CMD ["tail", "-f", "/dev/null"]
 FROM openjdk:17
-
-EXPOSE 8080
-
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+MAINTAINER Leonid
+COPY build/libs/diplom-backend-0.0.1-SNAPSHOT.jar project.jar
+EXPOSE 2004
+ENTRYPOINT ["java", "-jar", "/project.jar"]
